First Try On Color Management

--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -1,10 +1,7 @@
 page-search {
-
-}
-
-img{
-  height: 12em !important;
-  display:block;
-  width: auto !important;
   
+}
+ion-item
+{
+    background-color: green;
 }
