--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,14 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+
+.toolbar-background {
+    background: green;
+}
+.bg-style {
+    background: #2b2b2b;
+}
+.white {
+    color: white;
+}
