--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,6 +34,7 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
+  bgContent: #FFFFFF,
   primary:    #488aff,
   secondary:  #32db64,
   danger:     #f53d3d,
@@ -41,6 +42,8 @@ $colors: (
   dark:       #222
 );
 
+$toolbar-ios-title-text-color: #dfdfdf;
+$toolbar-md-title-text-color: #dfdfdf;
 
 // App iOS Variables
 // --------------------------------------------------
