Progresbar in Seasons

--- a/src/pages/seasons/seasons.scss
+++ b/src/pages/seasons/seasons.scss
@@ -7,3 +7,15 @@ page-seasons {
 .full {
     width: 100%
 }
+.progress {
+    height: 6px;
+    background: white;
+    padding: 0px;
+    margin: 0px;
+}
+.progressRest {
+    height: 6px;
+    background: gray;
+    padding: 0px;
+    margin: 0px;
+}
